--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
-# Logs
-logs
-*.log
+# WebStorm
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# Angular
+/dist
+/out-tsc
+/node_modules
+/.angular/cache
+/coverage
+
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+
+# Logs
+logs
+*.log
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
